# calculator

./: README.md
.github/checker/: meson.build
.github/checker/test/: test_1.c  test_2.c  test_3.c  test_4.c
src/: calculator.c  main.c
